--- a/majalaat/src/app/about/about.component.html
+++ b/majalaat/src/app/about/about.component.html
@@ -34,7 +34,8 @@
 
     ومن هنا جاءت فكرة "مجالات"، وهي منصّة تهدف إلى مساعدة كلّ مقبل على التعليم في مجتمعنا العربي على اختيار المجال
     والمكان الدراسي الأنسب لميوله وطموحه وقدراته وظروفه. حيث تتيح النسخة الأولى من المنصّة إمكانيّة التشبيك والتواصل
-    المباشر مع أشخاص خاضوا تجربة شبيهة لتلك التي يقف القبل على التعليم على عتبتها، أو يدرسون الآن موضوعا في مؤسّسة يفكّر
+    المباشر مع أشخاص خاضوا تجربة شبيهة لتلك التي يقف المقبل على التعليم على عتبتها، أو يدرسون الآن موضوعا في مؤسّسة
+    يفكّر
     بالالتحاق بها، أو أشخاص تخرّجوا وعملوا في مجال لسنوات عدّة ويمكنهم تقديم النّصح حول العمل في المجال وطبيعته.
 
     <br /><br />
