--- a/majalaat/src/app/home/home.component.html
+++ b/majalaat/src/app/home/home.component.html
@@ -27,7 +27,8 @@
 
 
 
-<a routerLink="/volunteers" class="block large-btn" mat-raised-button color="primary">تصفّح المتطوّعين</a>
+<a routerLink="/volunteers" class="block large-btn" mat-raised-button color="primary" gaEvent="explore_volunteers">تصفّح
+    المتطوّعين</a>
 
 
 <hr />
@@ -45,7 +46,7 @@
 </h3>
 <a class="block  large-btn" target="_blank"
     href="https://docs.google.com/forms/d/e/1FAIpQLScTF9AHiqFggAVP4kPz29nRpVNr5IP_XNmm8uMUlVxzaGe2qg/viewform"
-    mat-raised-button color="accent">الانضمام كمتطوّع</a>
+    mat-raised-button color="accent" gaEvent="join_as_volunteer">الانضمام كمتطوّع</a>
 
 <span>
 
