--- a/majalaat/src/app/useful-links-page/useful-links-page.component.html
+++ b/majalaat/src/app/useful-links-page/useful-links-page.component.html
@@ -2,7 +2,7 @@
     هل لديكم أي رابط أو مرجع مفيد للطلاب أو المقبلين على التعليم؟ شاركوهم به الآن!
 </span>
 
-<a class="block large-btn" target="_blank"
+<a class="block large-btn" target="_blank" gaEvent="suggest_useful_link"
     href="https://docs.google.com/forms/d/e/1FAIpQLSey0XS4vuBfbERbsL9Dfjoi92HK_TU_Hyv7YzXNxCYQDsF8pA/viewform"
     mat-raised-button color="accent">اقتراح رابط مفيد</a>
 
