--- a/majalaat/src/app/volunteers/volunteers.component.html
+++ b/majalaat/src/app/volunteers/volunteers.component.html
@@ -120,7 +120,7 @@
 
     <mat-form-field class="block search" gaEvent="volunteer_search">
         <mat-label>بحث ضمن المتطوّعين</mat-label>
-        <input matInput type=" text" [(ngModel)]="searchText" autocomplete="off">
+        <input matInput type=" text" [(ngModel)]="searchText" autocomplete="off" name="search">
 
     </mat-form-field>
 
