--- a/majalaat/src/app/home/home.component.html
+++ b/majalaat/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <header>
 
     <h3>
-        مبادرة مجتمعيّة تهدف إلى مساعدة كلّ مقبل على التعليم في مجتمعنا العربي
+        مبادرة مجتمعيّة تهدف إلى مساعدة كلّ مقبل ومقبلة على التعليم في مجتمعنا العربي
 
-        على اختيار المجال والمكان الدراسي الأنسب لميوله وطموحه وقدراته وظروفه.
+        على اختيار المجال والمكان الدراسي الأنسب لميولهم، طموحهم، قدراتم وظروفهم.
 
     </h3>
 
@@ -46,7 +46,7 @@
 </h3>
 <a class="block  large-btn" target="_blank"
     href="https://docs.google.com/forms/d/e/1FAIpQLScTF9AHiqFggAVP4kPz29nRpVNr5IP_XNmm8uMUlVxzaGe2qg/viewform"
-    mat-raised-button color="accent" gaEvent="join_as_volunteer">الانضمام كمتطوّع</a>
+    mat-raised-button color="accent" gaEvent="join_as_volunteer">الانضمام كمتطوّع\ة</a>
 
 <span>
 
