--- a/majalaat/src/styles.scss
+++ b/majalaat/src/styles.scss
@@ -127,3 +127,10 @@ section {
         line-height: 80px;
     }
 }
+
+
+// .mat-tab-body-content{
+//     overflow: hidden!important;
+//     padding: 16px
+
+// }
