--- a/majalaat/src/app/volunteers/volunteers.component.html
+++ b/majalaat/src/app/volunteers/volunteers.component.html
@@ -1,27 +1,64 @@
-<header class="main-header">
-    المتطوّعون
-</header>
+<mat-tab-group mat-stretch-tabs dynamicHeight animationDuration="0ms"
+    (selectedIndexChange)="filterArgs.favoritesOnly = ($event == 1); loadFavorites();">
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <mat-icon>group</mat-icon>
+            جميع المتطوّعين
+
+        </ng-template>
+
+
+        <!-- <div class="tip mat-elevation-z2">
+
+            <mat-icon>info</mat-icon>
+            يمكنك الضغط على أي من المتطوعين أدناه للتواصل معهم.
+            يمكن الضغط على كبسة <mat-icon class="filter-icon">filter_alt</mat-icon> أدناه من أجل البحث عن متطوّعين من
+            مجال أو
+            مؤسسة أكاديميّة أو بلد معيّن.
+
+        </div> -->
+
+        <div>
+            <form class="search-container">
+
+                <mat-form-field class="block search" gaEvent="volunteer_search">
+                    <mat-label>بحث ضمن المتطوّعين</mat-label>
+                    <input matInput type=" text" [(ngModel)]="searchText" autocomplete="off" name="search">
+
+                </mat-form-field>
+
+
+
+            </form>
+
+
+
+            <button id="filter-btn" mat-fab color="accent" aria-label="filter button" (click)="showFilteringDialog()"
+                [matBadge]="appliedFiltersCount" matBadgePosition="before" matBadgeSize="large" matBadgeColor="primary"
+                [matBadgeHidden]="appliedFiltersCount ==0" gaEvent="open_volunteer_filter_dialog">
+                <mat-icon>filter_alt</mat-icon>
+            </button>
+
+        </div>
+
+    </mat-tab>
+
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <mat-icon>star</mat-icon>
+            المفضّلة
+        </ng-template>
+
+
+    </mat-tab>
+
+
+</mat-tab-group>
 
 
 
 
-
-
-<form class="search-container">
-
-    <mat-form-field class="block search" gaEvent="volunteer_search">
-        <mat-label>بحث ضمن المتطوّعين</mat-label>
-        <input matInput type=" text" [(ngModel)]="searchText" autocomplete="off" name="search">
-
-    </mat-form-field>
-
-
-
-</form>
-
-
-
-<div *ngIf='volunteers | filter:searchText as filteredItems'>
+<section id="volunteers-list-container" *ngIf='volunteers | filter:searchText as filteredItems'>
 
     <div>
         <label class="search-count" *ngIf="searchText"> عدد نتائج البحث:
@@ -30,19 +67,18 @@
     </div>
 
 
-
     <section id="volunteers-list" fxLayout="row wrap" fxLayoutGap="16px grid">
 
-        <div gaEvent="volunteer_show_details" *ngFor="let volunteer of filteredItems | volunteerFilter:filterArgs"
-            fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
-            <app-volunteer [volunteer]="volunteer" (click)="showVolunteerDetails(volunteer)"></app-volunteer>
+
+
+        <div gaEvent="volunteer_show_details"
+            *ngFor="let volunteer of filteredItems | volunteerFilter:filterArgs as results" fxFlex="33%"
+            fxFlex.xs="100%" fxFlex.sm="50%">
+            <app-volunteer [volunteer]="volunteer" [isFavorite]="volunteer.isFavorite"
+                (click)="showVolunteerDetails(volunteer)">
+            </app-volunteer>
+
         </div>
     </section>
 
-</div>
-
-
-<button id="filter-btn" mat-fab color="accent" aria-label="filter button" (click)="showFilteringDialog()"
-[matBadge]="appliedFiltersCount" matBadgePosition="before" matBadgeSize="large" matBadgeColor="primary" [matBadgeHidden]="appliedFiltersCount ==0">
-    <mat-icon>filter_alt</mat-icon>
-</button>
+</section>
