--- a/majalaat/src/app/partner-dialog/partner-dialog.component.scss
+++ b/majalaat/src/app/partner-dialog/partner-dialog.component.scss
@@ -18,10 +18,10 @@ blockquote {
 	font-weight: 100;
 	position: relative;
 	margin: 0;
-    font-family: 'Aref Ruqaa', serif;
+    // font-family: 'Aref Ruqaa', serif;
     text-align: justify;
     font-size: large;
-
+    line-height: 150%;
 
 }
 
