--- a/majalaat/src/app/useful-link/useful-link.component.scss
+++ b/majalaat/src/app/useful-link/useful-link.component.scss
@@ -7,6 +7,7 @@ label {
     font-weight: bold;
     display: flex;
     // text-decoration: underline;
+    cursor: pointer;
 
     mat-icon {
         margin-inline-end: 4px;
