--- a/majalaat/src/app/partner-dialog/partner-dialog.component.html
+++ b/majalaat/src/app/partner-dialog/partner-dialog.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>
-مرحبا بكم في مجالات!
+مرحبًا بكم في مجالات!
 </h1>
 
 <h3>بالتعاون مع: <strong>{{partner.name}}</strong></h3>
@@ -29,5 +29,5 @@
 </div>
 
 <div mat-dialog-actions>
-    <button mat-raised-button color="primary" class="app-btn-primary" (click)="onConfirm()" style="width: 100%; height: 64px;">تصفّح المتطوّعون</button>
+    <button mat-raised-button color="primary" class="app-btn-primary" (click)="onConfirm()" style="width: 100%; height: 64px;">تصفّح المتطوّعين</button>
 </div>
